[package]
name = "qbittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "1.14.0"
serde_repr = "0.1"

reqwest = { version = "0.11.11", features = ["cookies", "multipart"] }
tokio = { version = "1.19.2", features = ["full"] }